--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="dark-mode">
   <header class="header">
     <img src="assets/images/Logo1.png" alt="Logo">
-    <h1>Portfolio</h1>
+    <h1>Portofolio</h1>
     <div class="theme-switch" onclick="toggleTheme()">
       <i class="fas fa-moon"></i>
     </div>
